--- a/SouthDakotaDiaspora/Site/Views/Users/Details.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Users/Details.cshtml
@@ -41,6 +41,14 @@
         <dd>
             @Html.DisplayFor(model => model.UserRole)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TimeZonePreference)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TimeZonePreference)
+        </dd>
     </dl>
 </div>
 <p>
