--- a/SouthDakotaDiaspora/Site/Views/Users/Edit.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Users/Edit.cshtml
@@ -61,6 +61,14 @@
         </div>
     }
 
+    <div class="form-group">
+        @Html.LabelFor(model => model.TimeZonePreference, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EnumDropDownListFor(model => model.TimeZonePreference, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TimeZonePreference, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
