--- a/SouthDakotaDiaspora/Site/Views/Users/Delete.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Users/Delete.cshtml
@@ -10,7 +10,7 @@
 
     // OR
 
-    (Session["UserID"] != null && Model.Id.ToString() == Session["UserID"].ToString())) // You are yourself
+    (Session["UserID"] != null && Model.UserId.ToString() == Session["UserID"].ToString())) // You are yourself
 {
     <h3>Are you sure you want to delete this?</h3>
     <div>
