--- a/SouthDakotaDiaspora/Site/Content/themes/custom/Diaspora.css
+++ b/SouthDakotaDiaspora/Site/Content/themes/custom/Diaspora.css
@@ -65,18 +65,45 @@
 .timeline-table > tbody > tr > td {
     border-top: none;
 }
-.timeline-table h3 {
-    color: black;
-    font-weight:600;
+.timeline-category-small {
+    font-size: 18px;
+    color: #0000006b;
+    font-weight: 600;
     margin-top: 5px;
     margin-bottom: 5px;
+    text-shadow: 1px 1px 1px #ffffff75;
+    font-style: italic;
+}
+.timeline-category-large {
+    font-size: 18px;
+    color: #0000006b;
+    font-weight: 600;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    text-shadow: 1px 1px 1px #ffffff75;
 }
 .timeline-table td:nth-child(1) {
     width: 24%;
     margin-top: 4px;
 }
-
-
+.timeline-table td:nth-child(2) {
+    width: 18%;
+}
+.timeline-table td:nth-child(3) {
+    width: 12%;
+}
+.timeline-table td:nth-child(4) {
+    width: 9%;
+}
+.timeline-table td:nth-child(5) {
+    width: 9%;
+}
+.timeline-table td:nth-child(6) {
+    width: 22%;
+}
+.timeline-table td:nth-child(7) {
+    width: 8%;
+}
 
 /* TIMELINE HEADER */
 .timeline-head > td {
@@ -88,13 +115,14 @@
 
 /* TIMELINE: PREVIOUS */
 .timeline-prev {
-    font-size: 18px;
+    font-size: 13px;
     background-color: #CCCDED;
 }
 .timeline-prev td:nth-child(1) {
     font-size: 18px;
     color: #EBE8FF;
     background-color: #BCBDED;
+    text-shadow: 1px 1px 2px #0000007a;
 }
 .timeline-prev>td {
     padding: 0px !important;
@@ -104,25 +132,27 @@
 
 /* TIMELINE: TODAY */
 .timeline-today {
-    font-size: 26px;
+    font-size: 20px;
     background-color: #D9DAFF;
 }
 .timeline-today td:nth-child(1) {
     font-size: 26px;
-    color: #EBE8FF;
+    color: #ffffff;
     background-color: #BABCFF;
+    text-shadow: 2px 1px 2px black;
 }
 
 
 /* TIMELINE: FUTURE: */
 .timeline-future {
-    font-size: 18px;
+    font-size: 13px;
     background-color: #CBCDFF;
 }
 .timeline-future td:nth-child(1) {
     font-size: 18px;
     color: #EBE8FF;
     background-color: #BABCFF;
+    text-shadow: 1px 1px 2px #0000007a;
 }
 .timeline-future > td {
     padding: 0px !important;
