--- a/SouthDakotaDiaspora/Site/Views/Games/Index.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Games/Index.cshtml
@@ -27,7 +27,7 @@
     </tr>
     @foreach (var item in Model)
     {
-        <tr class="clickable-row" onclick="location.href ='@Url.Action("Edit", new { id = item.Id})'">
+        <tr class="clickable-row" onclick="location.href ='@Url.Action("Edit", new { id = item.ActivityId})'">
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
@@ -41,7 +41,7 @@
                 @Html.DisplayFor(modelItem => item.ReleaseDate)
             </td>
             <td>
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.ActionLink("Delete", "Delete", new { id = item.ActivityId })
             </td>
         </tr>
     }
