--- a/SouthDakotaDiaspora/Site/Views/Timeline/Create.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Timeline/Create.cshtml
@@ -1,55 +1,9 @@
-﻿@model Data.Models.TimelineEvent
+﻿@model Site.Models.Timeline.TimelineCreateViewModel
 
 @{
     ViewBag.Title = "Create";
 }
 
-
-<h2>Create</h2>
-
-@using (Html.BeginForm(Html.BeginForm("Create", "Timeline", FormMethod.Post, new { @autocomplete = "off" })))
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <h4>TimelineEvent</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.StartTime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StartTime, new { htmlAttributes = new { @class = "form-control", @id = "start-time-picker" } })
-                @Html.ValidationMessageFor(model => model.StartTime, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.EndTime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.EndTime, new { htmlAttributes = new { @class = "form-control", @id = "end-time-picker" } })
-                @Html.ValidationMessageFor(model => model.EndTime, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @*DATE AND TIME PICKER*@
 @section Scripts {
@@ -57,11 +11,8 @@
     @Styles.Render("~/Content/cssjqryUi")
     @Scripts.Render("~/bundles/jquerytimepicker")
     @Styles.Render("~/Content/jquerytimepicker")
-<script type="text/javascript">
 
-    var startDateTextBox = $('#start-time-picker');
-    var endDateTextBox = $('#end-time-picker');
-
+    <script>
         $(document).ready(function () {
             $('input[type=datetime]').datetimepicker({
                 numberOfMonths: 3,
@@ -78,10 +29,112 @@
                     { value: -300, label: 'Eastern' }
                 ]
             }).datetimepicker("setDate", new Date());
+
+
+            $(".ActivityTypeDropdown")
+                .prop("disabled", true)
+                .change(function () {
+                    $("#ActivityID").val($(this).val());
+                });
+            $(".ActivityTypeRadio").change(function () {
+                if ($("#gamebutton:checked").length > 0) {
+                    $(".ActivityTypeDropdown").prop("disabled", true);
+                    $("#gamelist").prop("disabled", false);
+                    $("#ActivityID").val($("#gamelist").val());
+                }
+                if ($("#showbutton:checked").length > 0) {
+                    $(".ActivityTypeDropdown").prop("disabled", true);
+                    $("#showlist").prop("disabled", false);
+                    $("#ActivityID").val($("#showlist").val());
+                }
+                if ($("#bookbutton:checked").length > 0) {
+                    $(".ActivityTypeDropdown").prop("disabled", true);
+                    $("#booklist").prop("disabled", false);
+                    $("#ActivityID").val($("#booklist").val());
+                }
+                if ($("#projectbutton:checked").length > 0) {
+                    $(".ActivityTypeDropdown").prop("disabled", true);
+                    $("#projectlist").prop("disabled", false);
+                    $("#ActivityID").val($("#projectlist").val());
+                }
+            });
+
         });
-
-@*var timezonecode = @(Session["TimeZoneCode"] != null ? Session["TimeZoneCode"] : "-420");
-timezoneList.value = timezonecode;*@
-
-</script>
+    </script>
 }
+
+
+
+<h2>Create</h2>
+
+@using (Html.BeginForm(Html.BeginForm("Create", "Timeline", FormMethod.Post, new { @autocomplete = "off" })))
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        <h4>TimelineEvent</h4>
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <hr />
+
+        <h5>Event Type:</h5>
+        @Html.Hidden("ActivityID")
+        <div style="@(Model.GameSelection.Count <= 0 ? "display: none;" : "")">
+            Game @Html.RadioButton("ActivityType", "game", false, new { @class = "ActivityTypeRadio", @id = "gamebutton" })
+            @Html.DropDownList("gamelist", @Model.GameSelection, new { @class = "ActivityTypeDropdown" })
+        </div>
+
+        <div style="@(Model.ShowSelection.Count <= 0 ? "display: none;" : "")">
+            Movie/Show @Html.RadioButton("ActivityType", "show", false, new { @class = "ActivityTypeRadio", @id = "showbutton" })
+            @Html.DropDownList("showlist", @Model.ShowSelection, new { @class = "ActivityTypeDropdown" })
+        </div>
+
+        <div style="@(Model.BookSelection.Count <= 0 ? "display: none;" : "")">
+            Book/Article @Html.RadioButton("ActivityType", "book", false, new { @class = "ActivityTypeRadio", @id = "bookbutton" })
+            @Html.DropDownList("booklist", @Model.BookSelection, new { @class = "ActivityTypeDropdown" })
+        </div>
+
+        <div style="@(Model.ProjectSelection.Count <= 0 ? "display: none;" : "")">
+            Project @Html.RadioButton("ActivityType", "project", false, new { @class = "ActivityTypeRadio", @id = "projectbutton" })
+            @Html.DropDownList("projectlist", @Model.ProjectSelection, new { @class = "ActivityTypeDropdown" })
+        </div>
+
+
+
+        <hr />
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Tevent.Title, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Tevent.Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Tevent.Title, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Tevent.StartTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Tevent.StartTime, new { htmlAttributes = new { @class = "form-control", @id = "start-time-picker" } })
+                @Html.ValidationMessageFor(model => model.Tevent.StartTime, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Tevent.EndTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Tevent.EndTime, new { htmlAttributes = new { @class = "form-control", @id = "end-time-picker" } })
+                @Html.ValidationMessageFor(model => model.Tevent.EndTime, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+}
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+
