--- a/SouthDakotaDiaspora/Site/Views/Timeline/Index.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Timeline/Index.cshtml
@@ -12,15 +12,18 @@
 <table class="timeline-table table" style="text-align: center;">
 
     @* HEADERS *@
-    <tr class="timeline-head"><td><h3></h3></td><td>Title</td><td>Activity</td><td>Duration</td><td>Platform</td><td>Attending</td><td></td></tr>
+    <tr class="timeline-head"><td><h3></h3></td><td>Type</td><td>Title</td><td>Activity</td><td>Duration</td><td>Platform</td><td>Attending</td><td></td></tr>
 
     <!-- Past Events -->
-    <tr class="timeline-prev"><td><h3 class="timeline-category-small">@("<--") Previous</h3></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+    <tr class="timeline-prev"><td><h3 class="timeline-category-small">@("<--") Previous</h3></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
     @foreach (var item in Model.PastEvents)
     {
 <tr class="timeline-prev clickable-row" onclick="location.href ='@Url.Action("Details", new { id = item.Id})'">
     <td>
         @Html.DisplayFor(modelItem => item.StartTimeDisplay)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Type)
     </td>
     <td title="@Html.DisplayFor(modelItem => item.Title)">
         @Html.DisplayFor(modelItem => item.TitleAbbreviated)
@@ -51,70 +54,76 @@
     }
 
     <!-- Today Events -->
-    <tr class="timeline-today"><td><span class="timeline-category-large">~ Now/Soon ~</span></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+    <tr class="timeline-today"><td><span class="timeline-category-large">~ Now/Soon ~</span></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
     @foreach (var item in Model.TodayEvents)
     {
-        <tr class="timeline-today clickable-row" onclick="location.href ='@Url.Action("Edit", new { id = item.Id})'">
-            <td>
-                @Html.DisplayFor(modelItem => item.StartTimeDisplay)
-            </td>
-            <td title="@Html.DisplayFor(modelItem => item.Title)">
-                @Html.DisplayFor(modelItem => item.TitleAbbreviated)
-            </td>
-            <td title="@Html.DisplayFor(modelItem => item.ActivityName)">
-                @Html.DisplayFor(modelItem => item.ActivityNameAbbreviated)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Duration)
-            </td>
-            <td title="@Html.DisplayFor(modelItem => item.Platform)">
-                @Html.DisplayFor(modelItem => item.PlatformAbbreviation)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Attending)
-            </td>
-            <td>
-                @using (Html.BeginForm("Delete", "Timeline", new { id = item.Id }, FormMethod.Post, new { @class = "buttonless-button" }))
-                {
-                    @Html.AntiForgeryToken()
-                    <input class="timeline-today buttonless-button" type="submit" value="Delete" />
-                }
-            </td>
-        </tr>
+<tr class="timeline-today clickable-row" onclick="location.href ='@Url.Action("Edit", new { id = item.Id})'">
+    <td>
+        @Html.DisplayFor(modelItem => item.StartTimeDisplay)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Type)
+    </td>
+    <td title="@Html.DisplayFor(modelItem => item.Title)">
+        @Html.DisplayFor(modelItem => item.TitleAbbreviated)
+    </td>
+    <td title="@Html.DisplayFor(modelItem => item.ActivityName)">
+        @Html.DisplayFor(modelItem => item.ActivityNameAbbreviated)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Duration)
+    </td>
+    <td title="@Html.DisplayFor(modelItem => item.Platform)">
+        @Html.DisplayFor(modelItem => item.PlatformAbbreviation)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Attending)
+    </td>
+    <td>
+        @using (Html.BeginForm("Delete", "Timeline", new { id = item.Id }, FormMethod.Post, new { @class = "buttonless-button" }))
+        {
+            @Html.AntiForgeryToken()
+            <input class="timeline-today buttonless-button" type="submit" value="Delete" />
+        }
+    </td>
+</tr>
     }
 
     <!-- Future Events -->
-    <tr class="timeline-future"><td><h3 class="timeline-category-small">Later --></h3></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+    <tr class="timeline-future"><td><h3 class="timeline-category-small">Later --></h3></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
     @foreach (var item in Model.FutureEvents)
     {
-        <tr class="timeline-future clickable-row" onclick="location.href ='@Url.Action("Edit", new { id = item.Id})'">
-            <td>
-                @Html.DisplayFor(modelItem => item.StartTimeDisplay)
-            </td>
-            <td title="@Html.DisplayFor(modelItem => item.Title)">
-                @Html.DisplayFor(modelItem => item.TitleAbbreviated)
-            </td>
-            <td title="@Html.DisplayFor(modelItem => item.ActivityName)">
-                @Html.DisplayFor(modelItem => item.ActivityNameAbbreviated)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Duration)
-            </td>
-            <td title="@Html.DisplayFor(modelItem => item.Platform)">
-                @Html.DisplayFor(modelItem => item.PlatformAbbreviation)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Attending)
-            </td>
-            <td>
-                @using (Html.BeginForm("Delete", "Timeline", new { id = item.Id }, FormMethod.Post, new { @class = "buttonless-button" }))
-                {
-                    @Html.AntiForgeryToken()
-                    <input class="timeline-future buttonless-button" type="submit" value="Delete" />
-                }
+<tr class="timeline-future clickable-row" onclick="location.href ='@Url.Action("Edit", new { id = item.Id})'">
+    <td>
+        @Html.DisplayFor(modelItem => item.StartTimeDisplay)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Type)
+    </td>
+    <td title="@Html.DisplayFor(modelItem => item.Title)">
+        @Html.DisplayFor(modelItem => item.TitleAbbreviated)
+    </td>
+    <td title="@Html.DisplayFor(modelItem => item.ActivityName)">
+        @Html.DisplayFor(modelItem => item.ActivityNameAbbreviated)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Duration)
+    </td>
+    <td title="@Html.DisplayFor(modelItem => item.Platform)">
+        @Html.DisplayFor(modelItem => item.PlatformAbbreviation)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Attending)
+    </td>
+    <td>
+        @using (Html.BeginForm("Delete", "Timeline", new { id = item.Id }, FormMethod.Post, new { @class = "buttonless-button" }))
+        {
+            @Html.AntiForgeryToken()
+            <input class="timeline-future buttonless-button" type="submit" value="Delete" />
+        }
 
-            </td>
-        </tr>
+    </td>
+</tr>
     }
 </table>
 
