--- a/SouthDakotaDiaspora/Site/Views/Books/Index.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Books/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<Data.Models.Book>
+﻿@model IEnumerable<Site.Models.Books.BookInfo>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Books";
 }
 
-<h2>Index</h2>
+<h2>Books</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -15,53 +15,86 @@
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WebsiteUrl)
+            @Html.DisplayNameFor(model => model.Author)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.PublishDate)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.NumberOfPages)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Platform)
         </th>
+
         <th>
-            @Html.DisplayNameFor(model => model.Author)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NumberPages)
+            @Html.DisplayNameFor(model => model.Url)
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr class="clickable-row" onclick="location.href ='@Url.Action("Edit", new { id = item.ActivityId})'">
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.WebsiteUrl)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PublishDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Platform)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Author)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumberPages)
-        </td>
-        <td>
-            @Html.ActionLink("Delete", "Delete", new { id=item.ActivityId })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr class="clickable-row" onclick="clickrow('@Url.Action("Edit", new { id = item.ActivityId})');">
+            <td title="@Html.DisplayFor(modelItem => item.Name)">
+                @Html.DisplayFor(modelItem => item.NameAbbreviated)
+            </td>
+            <td title="@Html.DisplayFor(modelItem => item.Author)">
+                @Html.DisplayFor(modelItem => item.AuthorAbbreviated)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PublishDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NumberOfPages)
+            </td>
+            <td title="@Html.DisplayFor(modelItem => item.Platform)">
+                @Html.DisplayFor(modelItem => item.PlatformAbbreviation)
+            </td>
+
+            <td title="@Html.DisplayFor(modelItem => item.Url)">
+                @if (item.UrlWellFormatted)
+                {
+                    <a class="except" onclick="followLink(event, '@(item.Url)')">@Html.DisplayFor(modelItem => item.UrlAbbreviated)</a>
+                }
+                else
+                {
+                    @Html.DisplayFor(modelItem => item.UrlAbbreviated)
+                }
+
+            </td>
+            <td>
+                @Html.ActionLink("Delete", "Delete", new { id = item.ActivityId })
+            </td>
+        </tr>
+    }
 
 </table>
+
+@* Clicking on URLs*@
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryui")
+
+    <script type="text/javascript">
+        var allowClickRow;
+
+        $(document).ready(function () {
+            allowClickRow = true;
+        });
+
+        function followLink(event, url) {
+            window.open(url, '_blank');
+            event.preventDefault();
+            allowClickRow = false;
+        }
+
+        function clickrow(url) {
+            if (allowClickRow) {
+                location.href = url;
+            }
+            else {
+                allowClickRow = true;
+            }
+        }
+    </script>
+}
