Detail Pages, smarter 'back' button
+ Added detail pages to Games, Shows, Books, Projects
+ Updated row links to go to details page instead of edit
+ Clicking back on the details page will either bring you back to the timeline or the list view you came from

--- a/SouthDakotaDiaspora/Site/Views/Games/Index.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Games/Index.cshtml
@@ -27,7 +27,7 @@
     </tr>
     @foreach (var item in Model)
     {
-        <tr class="clickable-row" onclick="location.href ='@Url.Action("Edit", new { id = item.ActivityId})'">
+        <tr class="clickable-row" onclick="location.href ='@Url.Action("Details", new { id = item.ActivityId})'">
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
