--- a/SouthDakotaDiaspora/Site/Views/Timeline/Edit.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Timeline/Edit.cshtml
@@ -41,7 +41,7 @@
         <h4>TimelineEvent</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.TimelineEventId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
