--- a/SouthDakotaDiaspora/Site/Views/Timeline/Index.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Timeline/Index.cshtml
@@ -24,7 +24,7 @@
     </td>
     <td title="@Html.DisplayFor(modelItem => item.ActivityName)">
         @Html.DisplayFor(modelItem => item.Type)
-        <a href="@Url.Action("Edit", item.ActivityType + "s", new { @id = item.ActivityReferenceId })">@item.ActivityNameAbbreviated</a>
+        <a href="@Url.Action("Details", item.ActivityType + "s", new { @id = item.ActivityReferenceId, bc="Timeline", ba="Index" })">@item.ActivityNameAbbreviated</a>
     </td>
     <td title="@Html.DisplayFor(modelItem => item.Title)">
         @Html.DisplayFor(modelItem => item.TitleAbbreviated)
@@ -61,7 +61,7 @@
     </td>
     <td title="@Html.DisplayFor(modelItem => item.ActivityName)">
         @Html.DisplayFor(modelItem => item.Type)
-        <a href="@Url.Action("Edit", item.ActivityType + "s", new { @id = item.ActivityReferenceId })">@item.ActivityNameAbbreviated</a>
+        <a href="@Url.Action("Details", item.ActivityType + "s", new { @id = item.ActivityReferenceId, bc="Timeline", ba="Index" })">@item.ActivityNameAbbreviated</a>
     </td>
     <td title="@Html.DisplayFor(modelItem => item.Title)">
         @Html.DisplayFor(modelItem => item.TitleAbbreviated)
@@ -95,7 +95,7 @@
     </td>
     <td title="@Html.DisplayFor(modelItem => item.ActivityName)">
         @Html.DisplayFor(modelItem => item.Type)
-        <a href="@Url.Action("Edit", item.ActivityType + "s", new { @id = item.ActivityReferenceId })">@item.ActivityNameAbbreviated</a>
+        <a href="@Url.Action("Details", item.ActivityType + "s", new { @id = item.ActivityReferenceId, bc="Timeline", ba="Index" })">@item.ActivityNameAbbreviated</a>
     </td>
     <td title="@Html.DisplayFor(modelItem => item.Title)">
         @Html.DisplayFor(modelItem => item.TitleAbbreviated)
