--- a/SouthDakotaDiaspora/Site/Views/Users/Index.cshtml
+++ b/SouthDakotaDiaspora/Site/Views/Users/Index.cshtml
@@ -27,6 +27,9 @@
         <th>
             @Html.DisplayNameFor(model => model.TimeZonePreference)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.LastLogin)
+        </th>
         <th></th>
     </tr>
 
@@ -44,6 +47,9 @@
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.TimeZonePreference, item.TimeZonePreference.GetType().Name)
+    </td>
+    <td>
+        @Site.Helpers.GlobalMethods.FormatTime(item.LastLogin)
     </td>
     <td>
         @if ((Session["Role"] != null && Session["Role"].ToString() == Data.Models.UserRoleType.Admin.ToString() && // You are an admin AND
